# ndbduplicates

./: .env-template  .pre-commit-config.yaml  README.md  ndbdup.py  pyproject.toml  report_rows.py
src/ndbduplicates/: __init__.py  get_row_counts.py  neo_connect.py  parse_rows.py  print_dup_rows.py  print_fk_tables.py  print_row_results.py  show_counts.py  show_rows.py
src/sql/: fk_tables.sql  get_rowcounts.sql  return_dup_rows.sql  update_rows.sql
